# manim-fourier-series

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: pages.yaml
docs/: index.md  reference.md
manim_fourier_series/: __init__.py  main.py  mobjects.py  paths.py  utils.py
reference/: index.html
